<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cam Scanner</string>
    <string name="capture">Capture</string>
    <string name="save_pdf">Save as PDF</string>
    <string name="retake_picture">Retake picture</string>
    <string name="settings">Settings</string>
    <string name="camera_permission_required">Camera permission is required to scan documents</string>
    <string name="storage_permission_required">Storage permission is required to save PDF files</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="document_saved">Document saved successfully</string>
    <string name="error_saving_document">Error saving document</string>
    <string name="no_document_detected">No document detected. Please adjust the camera.</string>
    <string name="detecting_document">Detecting document…</string>
    <string name="document_detected">Document detected!</string>
    <string name="show_debug_overlay">Show debug overlay</string>
    <string name="debug_overlay_on">Debug overlay enabled</string>
    <string name="debug_overlay_off">Debug overlay hidden</string>
    <string name="debug_settings">Debug</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="image_quality">Image Quality</string>
    <string name="auto_capture">Auto Capture</string>
    <string name="edge_detection_sensitivity">Edge Detection Sensitivity</string>
    <string name="enable_debug_overlay">Enable debug overlay</string>
    <string name="output_level">Output Level</string>
    <string name="setting_value_default" />
    <string name="toggle_flash">Toggle flash</string>
    <string name="toggle_automatic_aspect_ratio">Toggle automatic aspect ratio</string>
    <string name="document_preview">Document preview</string>
    <string name="open_filter_options">Open filter options</string>
    <string name="color_profile">Color Profile</string>
    <string name="brightness_contrast"><![CDATA[Brightness & Contrast]]></string>
    <string name="color">Color</string>
    <string name="grayscale">Grayscale</string>
    <string name="black_and_white"><![CDATA[Black & white]]></string>
</resources>
