<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/settings"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SettingSectionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_settings"/>

            <RelativeLayout
                style="@style/SettingItemHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/debug_overlay_switch"
                    style="@style/SettingItemLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_debug_overlay"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_debug_output_level_holder"
                style="@style/SettingItemHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settings_debug_output_level_label"
                    style="@style/SettingItemLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/output_level" />

                <TextView
                    android:id="@+id/settings_debug_output_level_value"
                    style="@style/SettingItemValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_debug_output_level_label"
                    android:text="@string/setting_value_default" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>