<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg_filter_dialog">
    
    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_remove"
        android:scaleType="centerCrop"
        android:layout_gravity="center|top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RelativeLayout
            style="@style/SettingItemHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/color_profile_label"
                style="@style/SettingItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_profile" />

            <TextView
                android:id="@+id/color_profile_value"
                style="@style/SettingItemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/color_profile_label"
                android:text="@string/setting_value_default" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/color_profile_black_and_white_button"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_doc"
            android:contentDescription="Black and white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/color_profile_grayscale_button"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_doc_with_chart"
            android:contentDescription="Greyscale"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/color_profile_colors_button"
            style="@style/IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_doc_with_flower"
            android:contentDescription="Colors"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <RelativeLayout
            style="@style/SettingItemHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/brightness_contrast_label"
                style="@style/SettingItemLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brightness_contrast" />

            <TextView
                android:id="@+id/brightness_contrast_value"
                style="@style/SettingItemValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brightness_contrast_label"
                android:text="@string/setting_value_default" />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>